k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: search
spec:
  template:
    spec:
      containers:
        - name: search
          image: shokohsc/search
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 256M
