k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.shokohsc.home/name: dev-search
    dashboard.shokohsc.home/url: https://dev.search.shokohsc.home
    dashboard.shokohsc.home/icon: wrench
spec:
  rules:
  - host: dev.search.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
  tls:
  - hosts:
    - dev.search.shokohsc.home
    secretName: search-cert
